fix row spacing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,7 +8,7 @@
     padding-right: 70px;
 }
 
-.row {
+.game-row {
     margin-left: -42px;
 }
 
